# beam

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  ltbl_game_design_context.md  ltbl_project_context.md  ltbl_session01_counsel_layer.md  ltbl_session_01_checkpoint.md  nvidia_rtx_addendum_session07.md  nvidia_rtx_best_practices_for_ltbl.md  updated_nvidia_rtx_best_practices_for_ltbl.md
src/: accumulate.wgsl  app.rs  background_preshader.wgsl  background_shader.wgsl  background_shader_variant_bloom.wgsl  bloom_postshader.wgsl  bloom_ray_gen.wgsl  bvh.rs  clear_bloom_scratch.wgsl  clear_pass.wgsl  common_common.wgsl  gpu.rs  intersect.wgsl  intersect_common.wgsl  intersect_variant_bloom.wgsl  intersect_variant_canvas.wgsl  lib.rs  mesh_common.wgsl  ray_gen.wgsl  resolve.wgsl  roulette_pass.wgsl  roulette_variant_bloom.wgsl  roulette_variant_canvas.wgsl  selection_pass.wgsl  shade_common.wgsl  shade_diffuse.wgsl  shade_diffuse_variant_bloom.wgsl  shade_diffuse_variant_canvas.wgsl  shade_direct.wgsl  shade_direct_variant_bloom.wgsl  shade_direct_variant_canvas.wgsl  shade_glass.wgsl  shade_glass_variant_bloom.wgsl  shade_glass_variant_canvas.wgsl  shade_metallic.wgsl  shade_metallic_variant_bloom.wgsl  shade_metallic_variant_canvas.wgsl  shader.wgsl  sky_mask_init.wgsl  variance_pass.wgsl
web/: index.html
