[package]
name = "wgpu-wasm-project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "27", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuCanvasContext",
    "GpuTextureFormat",
] }
js-sys = "0.3"
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"
winit = { version = "0.30", features = ["rwh_06"] }
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[profile.release]
# Optimize for size when targeting WASM
opt-level = "z"
lto = true
